Create landing pages

--- a/src/templates/home_site2/landing_pages/event_surveys.html
+++ b/src/templates/home_site2/landing_pages/event_surveys.html
@@ -181,19 +181,7 @@
 
     <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
     </div>
-    <div class="row my-3">
-        <h2>Event survey importance</h2>
-        <p>
-            Exit interview surveys are a powerful tool for retention and improvement in organizations. <br> They can help you understand why employees stay, why they leave, and how the organization needs to change1. <br> They can also reveal hidden challenges and opportunities, generate competitive intelligence, and promote engagement and appreciation. <br> Exit interview surveys can help you identify potential retention issues before they lead to people leaving, and analyze trends and patterns by demographic, tenure, performance, and roles. <br>
-             They can also turn departing employees into corporate ambassadors for years to come.
 
-        </p>
-
-    </div>
-
-
-    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
-    </div>
  
     <div class=" my-3">
 
@@ -215,6 +203,8 @@
 
     </div>
 
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
     <div class="my-3">
         <h2>Importance of event surveys</h2>
         <p>
@@ -228,6 +218,36 @@
 <br>Eliminate the guesswork and make data-driven decisions based on actual feedback.
 <br>Estimate event growth by measuring the net promoter score and word-of-mouth potential of your event.
         </p>
+    </div>
+
+
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+
+    <div class="my-3">
+        <h2>Conference survey questions</h2>
+        Yes/no: Would you recommend the event to a friend or colleague? <br>
+ Did the event meet all of your expectations? <br>
+Open-ended: What was the most valuable part of the event for you? <br>
+ How can we improve the event for next time? <br>
+Multiple choice/ratings: On a scale of 1-10, how would you rate the event overall? <br>
+Which topics covered at this conference were you most interested in? <br>
+
+    </div>
+    
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+
+    <div class="my-3">
+        <h2>Benefits of using quizElements QR codes for surveys</h2>
+        <b>Ease of taking surveys:</b> Taking feedback through a QR code survey is as easy as it can get. All that the participants require doing is scanning the QR code through their cameras and start taking the survey.
+        <b><br>Convenience for brands:</b> QR codes can be printed on any physical medium such as receipts, flyers, posters, product packaging, etc. This allows brands to reach their customers at various touchpoints and collect feedback on the spot.
+        <b><br>Faster data collection:</b> QR codes can help brands collect data in real-time and avoid delays or drop-offs that may occur with other methods such as emails or phone calls.
+        <b><br>Contactless feedback:</b> QR codes can provide a safe and hygienic way of collecting feedback, especially during the pandemic. Customers can scan the QR code without touching anything and fill the survey on their own devices.
+        <b><br>Better survey participation:</b> QR codes can increase the response rates and quality of feedback by making it easy and convenient for customers to share their opinions and experiences. QR codes can also attract attention and curiosity, which can motivate customers to scan them and take the survey.
+        <b><br>Instant feedback sharing:</b> QR codes can enable brands to share feedback instantly with their customers, such as thank you messages, coupons, rewards, etc. This can help improve customer satisfaction and loyalty.
+        <b><br>Unidentified source feedback:</b> QR codes can allow brands to collect anonymous feedback from customers who may not want to share their personal details or contact information. This can help brands get honest and unbiased feedback from their customers.
+
     </div>
 
  
