--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -187,11 +187,13 @@
                                     </a>
                                 </li>
 
-                                {% comment %} <li class="nav-item ">
+
+
+                                <li class="nav-item ">
                                     <a class="nav-link" href="{% url 'wagtail_serve' '' %}category/all" >
                                         Blog
                                     </a>
-                                </li> {% endcomment %}
+                                </li> 
                                 {% if not user.is_authenticated %}
 
                                     <li class="nav-item ">
