Update review rating star layout

--- a/src/quizRender/templates/take_quiz_elements/review_stars.html
+++ b/src/quizRender/templates/take_quiz_elements/review_stars.html
@@ -36,7 +36,7 @@
           }
           
        </style>
-       <div id="question_{{element.id}}" class="row rating_star{{element.id}}" style="  flex-direction: row-reverse;justify-content: left;"
+       <div id="question_{{element.id}}" class="row rating_star{{element.id}} ml-5" style="  flex-direction: row-reverse;justify-content: left;"
        
        {% if not checked_db %}
        hx-trigger = 'load'
