Update links landing page

--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -55,7 +55,7 @@
                         <div class="card-body">
 
                             <p class="card-text">Create the perfect customer survey with fully customizable quizElements.</p>
-                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Customer surveys</a>
+                            <span class="btn btn-primary site-secondary-button my-3">Customer surveys</span>
                         </div>
                        
                     </div>
@@ -68,7 +68,7 @@
                         <div class="card-body">
 
                             <p class="card-text">Create amazing lead generation forms with facebook and Tiktok conversion API integration</p>
-                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Lead generation</a>
+                            <span class="btn btn-primary site-secondary-button my-3">Lead generation</span>
                         </div>
                     
                     </div>
@@ -81,7 +81,7 @@
                         <div class="card-body">
 
                             <p class="card-text">Create exit interview surveys easily and discover actionable insights.</p>
-                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Exit interview surveys</a>
+                            <span class="btn btn-primary site-secondary-button my-3">Exit interview surveys</span>
                         </div>
                     
                     </div>
@@ -93,7 +93,7 @@
                         <div class="card-body">
 
                             <p class="card-text">Pre and post event feedback surveys have never been easier includes QR code link.</p>
-                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Event feedback surveys</a>
+                            <span class="btn btn-primary site-secondary-button my-3">Event feedback surveys</span>
                         </div>
                     
                     </div>
